--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- First screen -->
   <div id="page1" class="container">
-    <img src="photo1.jpg" alt="Us together" class="main-photo" />
+    <img src="IMG_0195.jpg" alt="Us together" class="main-photo" />
 
     <h1>Will you be my Valentine? 💖</h1>
 
@@ -22,7 +22,7 @@
   <!-- Second screen -->
   <div id="page2" class="container hidden">
     <h1>I knew you’d say yes! 🥰</h1>
-    <img src="photo2.jpg" alt="More love" class="main-photo" />
+    <img src="yay.jpg" alt="More love" class="main-photo" />
   </div>
 
   <script src="script.js"></script>
