--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<audio id="loveSong" src="song.mp3"></audio>
 
   <!-- First screen -->
   <div id="page1" class="container">
-    <img src="IMG_0195.jpg" alt="Us together" class="main-photo" />
+    <img src="us.jpg" alt="Us together" class="main-photo" />
 
     <h1>Will you be my Valentine? 💖</h1>
 
@@ -20,10 +21,12 @@
   </div>
 
   <!-- Second screen -->
-  <div id="page2" class="container hidden">
-    <h1>I knew you’d say yes! 🥰</h1>
-    <img src="yay.jpg" alt="More love" class="main-photo" />
-  </div>
+<div id="page2" class="container hidden">
+  <h1>I knew you’d say yes! 🥰</h1>
+  <img src="yay.jpg" alt="More love" class="main-photo" />
+  <p class="final-text">You didn’t really have a choice 😌</p>
+</div>
+
 
   <script src="script.js"></script>
 </body>
