--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<audio id="loveSong" src="song.mp3"></audio>
+<audio id="loveSong" src="forever.mp3"></audio>
 
   <!-- First screen -->
   <div id="page1" class="container">
