--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- First screen -->
   <div id="page1" class="container">
-    <img src="us.JPG" alt="Us together" class="main-photo" />
+    <img src="us.jpg" alt="Us together" class="main-photo" />
 
     <h1>Will you be my Valentine? 💖</h1>
 
